# sendgrid-connector

./: .gitignore  Cargo.toml
examples/: rest_example.rs
src/rest/: config.rs  endpoints.rs  errors.rs  mod.rs  models.rs  rest_client.rs
