[package]
name = "sendgrid-connector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

flurl = { tag = "0.6.1", git = "https://github.com/MyJetTools/fl-url.git" }


http = "1.0.0"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_derive = "*"
tokio = { version = "*", features = ["full"] }
tokio-util = "*"
async-trait = "*"
futures = "*"
futures-util = { version = "*", default-features = false }
futures-core = { version = "*", default-features = false }
futures-channel = "*"
url = "*"
error-chain = { version = "0.12.4", default-features = false }
hmac = "*"
sha1 = "*"
sha2 = "*"
hex = "*"
serde_qs = "*"
uuid = { version = "*", features = ["v4"] }
chrono = "*"
